# VTK-Tutorial-Head-Multiplanar

MedicalDemo3/: CMakeLists.txt
